front-end/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    /* font-family: 'Poppins', sans-serif; */
    font-family: "Mona Sans", sans-serif;
}

html {
    font-size: 16px;
}

